--- a/demos/linear-algebra/matrix-ops/matrix-addition/index.html
+++ b/demos/linear-algebra/matrix-ops/matrix-addition/index.html
@@ -29,9 +29,7 @@
     </div>
 
     <!-- Required Ace Libraries -->
-    <script src="../../lib/js/ace-editor/src-min/ace.js"></script>
-    <script src="../../lib/js/ace-editor/src-min/mode-javascript.js"></script>
-    <script src="../../lib/js/ace-editor/src-min/ext-language_tools.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
 
     <!-- Custom Scripts -->
     <script src="./editor.js"></script>
